﻿===== Smarty 3.2-DEV  =====
22.10.2011
- add {exception} tag
- improved Exception messages (work still in progress)

21.10.2011
- bugfix nocache_hash processing

19.10.2011
- improvement SmartyRunTimeException now shows template source lines of error
- fix SmartyRunTimeException on eval and string resources
- bugfix getConfigVars() should also run into the default_config_variable_handler
- merged 3.1.4

18.10.2011
- bugfix {${$foo}} did not work (Smarty 3.2 parser)
- improvement remove BOM of template and config files in lexer
- bugfix cache_attr of registered plugins did not work after adding PHP reflection
- add $disable_core_plugins to disable looking for plugins in Smarty's plugins/

16.10.2011
- pass context object to default variable handlers
- add support of function and block plugins which use real parameter instead $params array
- moved compiled object into its own file smarty_compiled.php
- moved parts of fetch() code into classes it belongs to
- bugfix cached template objects must save/restore local variables in fetch()
- add modifier checks for required parameter
- merging 3.1 patches

14.10.2011
- add {$x = $k cachevalue} to make the value of $k available as nocache variable $x (Forum Topic 20123)
- removed traceback information from Smarty exceptions
- add SmartyRuntimeExecption

29.09.2011
- added namespace support for static classes in templates
- added PHP reflection to:
  * pass optional Smarty or template objects to modifier by type-hint
  * use type-hint to pass Smarty or template objects to plugins
  * use PHPdoc annotation to use smarty_nocache and smarty_cache_attr on plugins

28.09.2011
- remove scope property from Smarty_variable class
- code optimizations

26.09.2011
- add default variable handler
- add default config variable handler
- optimization of variable container handling

===== trunk  =====
22.10.2011
- bugfix smarty_mb_from_unicode() would not decode unicode-points properly